[tool.poetry]
name = "paddingoracle"
version = "0.1.0"
description = ""
authors = ["Emiel Wiedijk <13463911+aimileus@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^41.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

